--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,13 +10,13 @@ builds:
     - amd64
     - arm
     - arm64
-archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+archives:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
