Deps update. Goreleaser update.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,10 +3,6 @@ builds:
       - -trimpath
     env:
       - CGO_ENABLED=0
-    asmflags:
-      - all=-trimpath={{.Env.GOPATH}}
-    gcflags:
-      - all=-trimpath={{.Env.GOPATH}}
     ldflags: |
       -s -w -extldflags '-static'
     goos:
@@ -18,6 +14,16 @@ builds:
       - amd64
       - arm
       - arm64
+    goarm:
+      - 6
+      - 7
+    ignore:
+      - goos: windows
+        goarch: arm64
+      - goos: windows
+        goarch: arm
+universal_binaries:
+  - replace: true
 archives:
   - replacements:
       linux: Linux
@@ -26,6 +32,12 @@ archives:
       freebsd: FreeBSD
       386: i386
       amd64: x86_64
+    format_overrides:
+      - goos: windows
+        format: zip
+    files:
+      - README.md
+      - LICENSE
 checksum:
   name_template: "checksums.txt"
 snapshot:
