--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,6 +24,8 @@ builds:
         goarch: arm
 universal_binaries:
   - replace: true
+changelog:
+  sort: asc
 archives:
   - replacements:
       linux: Linux
@@ -38,13 +40,30 @@ archives:
     files:
       - README.md
       - LICENSE
+      - src: dist/CHANGELOG.md
+        dst: ""
+        strip_parent: true
 checksum:
   name_template: "checksums.txt"
 snapshot:
   name_template: "{{ .Tag }}-next"
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
+nfpms:
+  - package_name: imbilling2
+    vendor: Dinko Korunic
+    homepage: https://github.com/dkorunic/IM-billing-v2
+    maintainer: Dinko Korunic <dkorunic@gmail.com>
+    description: simple Google Calendar billing/tracking
+    license: GPL 2.0
+    formats:
+      - apk
+      - deb
+      - rpm
+      - termux.deb
+      - archlinux
+    bindir: /usr/bin
+    section: utils
+    priority: optional
+    deb:
+      lintian_overrides:
+        - statically-linked-binary
+        - changelog-file-missing-in-native-package
